--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -1,8 +1,9 @@
+
 body {
   background-color: #eaeaea;
 }
 
-ui.fixed.menu{
+.ui.fixed.menu {
   background-image: linear-gradient(
     135deg,
     rgb(24, 42, 115) 0%,
@@ -11,6 +12,6 @@ ui.fixed.menu{
   );
 }
 
-ui.main.container {
+.ui.main.container {
   margin-top: 7em;
 }
